# VisualSpectrum

./: Cargo.toml  launch.sh
src/: audio.rs  led.rs  lib.rs  main.rs  midi.rs  visualmidi.rs
