[package]
name = "spectrum"
version = "0.2.0"
authors = ["cmaves"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[profile.release]
#debug = true

[dependencies]
clap = "2.33.0"
jack = "0.6.0"
rs_ws281x = "0.2.3"
rustfft = "3.0.0"

